# wg21-paper-ai-markdown-converter

./: .env.example  .gitignore  README.md  download_papers.py  model-registry.yaml  pyproject.toml  requirements.txt  run_prompt.py  url2md.py
.github/workflows/: convert.yml
examples/: workflow.example.json
paper_tools/: __init__.py  agent_run_log.py  callback_client.py  config.py  invocation_log.py  layout_excerpt.py  model_registry.py  model_router.py  textutil.py  url_download.py  workspace_context.py
paper_tools/convert/: __init__.py  html_convert.py  output_naming.py  pdf_convert.py
paper_tools/substrate/: __init__.py  base.py  claude_code.py  cursor.py  cursor_chats.py
paper_tools/workflow/: __init__.py  orchestrator.py  schema.py  skill_runner.py  skill_spec.py
scripts/: uv-sync.sh
skills/: code.md  headings.md  line_breaks.md  links.md  lists.md  shared.md  styles.md  tables.md
